allowed-registries-policy/allowed_registries.yaml
apiVersion: apiserver.config.k8s.io/v1
kind: K8sAllowedRepos
metadata:
  name: allowed-registries
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    repos:
      - "demoaksacr01.azurecr.io"
      - "registry.hub.docker.com"
      # - "mcr.microsoft.com"
      # - "gcr.io"
      # - "openpolicyagent"
